# Energy-Market-Updates

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily-update.yml
configs/: sources.json
data/state/: pjm-mic.json
reports/daily/: 2026-04-30.md  2026-05-01.md
src/energy_market_updates/: __init__.py  cli.py  config.py  extractors.py  models.py  pipeline.py  summarizers.py
src/energy_market_updates/sources/: __init__.py  pjm_committee.py
